api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_message_question_peer_id.snap
---
source: api/src/v1/serde_tests.rs
expression: "Message::Question(Question::PeerId)"
---
{
  "type": "question",
  "content": {
    "type": "peerId"
  }
}
