api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_negotiation_media.snap
---
source: api/src/v1/serde_tests.rs
expression: val
---
{
  "type": "mediaNegotiation",
  "content": {
    "consumer_id": "00000000-0000-0000-0000-000000000001",
    "producer_id": "00000000-0000-0000-0000-000000000002",
    "session_id": "00000000-0000-0000-0000-000000000003",
    "sdp": {
      "type": "answer",
      "sdp": "v=0\r\n"
    }
  }
}
