api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_onvif_device_information.snap
---
source: api/src/v1/serde_tests.rs
expression: sample_onvif_device_information()
---
{
  "manufacturer": "ACME Corp",
  "model": "IPCam-4K",
  "firmware_version": "2.1.0",
  "serial_number": "SN-123456",
  "hardware_id": "HW-789"
}
