api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_post_stream.snap
---
source: api/src/v1/serde_tests.rs
expression: val
---
{
  "name": "Test Stream",
  "source": "/dev/video0",
  "stream_information": {
    "endpoints": [
      "rtsp://0.0.0.0:8554/test"
    ],
    "configuration": {
      "type": "video",
      "encode": "H264",
      "height": 1080,
      "width": 1920,
      "frame_interval": {
        "numerator": 1,
        "denominator": 30
      }
    },
    "extended_configuration": {
      "thermal": true,
      "disable_mavlink": false,
      "disable_zenoh": false,
      "disable_thumbnails": false
    }
  }
}
