api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_question_available_streams.snap
---
source: api/src/v1/serde_tests.rs
expression: "Question::AvailableStreams"
---
{
  "type": "availableStreams"
}
