api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_question_start_session.snap
---
source: api/src/v1/serde_tests.rs
expression: "Question::StartSession(bind)"
---
{
  "type": "startSession",
  "content": {
    "consumer_id": "00000000-0000-0000-0000-000000000000",
    "producer_id": "00000000-0000-0000-0000-000000000000"
  }
}
