api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_sdp.snap
---
source: api/src/v1/serde_tests.rs
expression: "Sdp { sdp: \"v=0\\r\\n\".into(), }"
---
{
  "sdp": "v=0\r\n"
}
