api/src/v1/snapshots/mcm_api__v1__serde_tests__snapshot_size.snap
---
source: api/src/v1/serde_tests.rs
expression: sample_size()
---
{
  "width": 1920,
  "height": 1080,
  "intervals": [
    {
      "numerator": 1,
      "denominator": 30
    }
  ]
}
